src/styles/global.css
/* ... */
.tag-how-to {
  background-color: var(--how-to);
  color: white;
}

.tag-fun {
  background-color: var(--fun);
  border: 2px dotted transparent;
  box-sizing: border-box;
}

.tag-fun:hover {
  animation: tag-fun-blink 0.3s linear infinite;
  border-color: var(--software);
}

@keyframes tag-fun-blink {
  50% {
    border: 2px dotted var(--fun);
    background-color: var(--software);
    color: white;
  }
}

@font-face {
  font-family: "ZCOOL";
  src: url("/fonts/ZCOOLXiaoWei-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "jersey";
  src: url("/fonts/Jersey20-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

body {
  font-family: "ZCOOL", "Trebuchet MS", sans-serif;
  margin: 0;
  padding: 0;
  text-align: left;
  background-size: 100% 600px;
  word-wrap: break-word;
  overflow-wrap: break-word;
  color: rgb(var(--gray-dark));
  font-size: 20px;
  line-height: 1.7;
  cursor: var(--cursor-default), auto;
}

video {
  max-width: 100%;
}

a {
  color: var(--black);
  cursor: var(--cursor-link), auto;
}
main {
  margin: auto;
  padding: 1em 1em;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0 0 1rem 0;
  color: rgb(var(--black));
  line-height: 1.2;
}
h1 {
  font-size: 2.8em;
}
h2 {
  margin-top: 1.5rem;
  font-size: 2em;
}
h3 {
  font-size: 1.953em;
}
h4 {
  font-size: 1.563em;
}
h5 {
  font-size: 1.25em;
}
strong,
b {
  font-weight: 700;
}
p {
  margin-bottom: 1em;
}
textarea {
  width: 100%;
  font-size: 16px;
}
input {
  font-size: 16px;
}
table {
  width: 100%;
}

img {
  max-width: 100%;
  height: auto;
  margin-bottom: 1em;
}

@media (min-width: 720px) {
  .prose img.full {
    max-width: 100%;
  }
  .prose img.three-quarters {
    max-width: 75%;
  }
  .prose img.half {
    max-width: 50%;
  }
  .prose img.less-than-half {
    max-width: 45%;
  }
  .prose img.third {
    max-width: 33.333%;
  }
}

div.code-container span.copy-link-text {
  display: none;
}

code {
  padding: 2px 5px;
  background-color: rgb(var(--gray-light));
}

pre {
  padding: 1.5em;
  font-size: 0.88rem;
  margin-bottom: 0;
  margin-top: 0;
  border-radius: 10px;
}

pre > code {
  all: unset;
}

pre.astro-code {
  cursor: var(--cursor-light), auto;
}

div.code-container {
  background-color: #23262e;
  overflow: hidden;
  cursor: var(--cursor-light), auto;
  margin-bottom: 1em;
  border-radius: 10px;
}

div.code-container > div.code-footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  overflow: hidden;
  padding: 0.5em 0.8em;
  font-family: monospace !important;
  font-size: 0.75em;
  color: #d5ced9;
  border-color: #d5ced9;
  border-style: solid;
  border-width: 1px 0px 0px 0px;
}

div.code-footer div.code-filename {
  max-width: 70%;
}

div.code-links {
  display: flex;
  align-items: center;
  gap: 1em;
}

div.code-links img {
  height: 20px;
  margin-bottom: 0;
  display: flex;
}

div.code-links a {
  cursor: var(--cursor-link-light), auto;
}

span.copy-link-text {
  font-size: 0.8em;
}

blockquote {
  border-left: 4px solid var(--accent);
  padding: 0 0 0 20px;
  margin: 0;
  font-size: 1.333em;
}

hr {
  border: none;
  border-top: 1px solid rgb(var(--gray-light));
}

@media (max-width: 720px) {
  body {
    font-size: 18px;
  }
  main {
    padding: 1em;
  }

  a.copy-link {
    display: none;
  }

  div.code-footer:not(:has(a[href^="http"])) {
    display: none;
  }
}

.sr-only {
  border: 0;
  padding: 0;
  margin: 0;
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
  clip: rect(1px 1px 1px 1px);
  /* maybe deprecated but we need to support legacy browsers */
  clip: rect(1px, 1px, 1px, 1px);
  /* modern browsers, clip-path works inwards from each corner */
  clip-path: inset(50%);
  /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
  white-space: nowrap;
}

